[gd_scene load_steps=6 format=3 uid="uid://dx755fqdvfrg8"]

[ext_resource type="Script" path="res://scripts/objects/restart.gd" id="1_fx3mu"]
[ext_resource type="Texture2D" uid="uid://bpalqpnk63wa4" path="res://assets/ui/Lucid-V1.2/Lucid V1.2/PNG/Flat/32/Redo.png" id="1_ipvay"]
[ext_resource type="FontFile" uid="uid://cxv5cjbfxvhip" path="res://assets/fonts/antiquity-print.ttf" id="3_l5mgo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2imlf"]
size = Vector2(26, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_ab7yh"]
radius = 71.007

[node name="restart" type="Node2D"]
script = ExtResource("1_fx3mu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ipvay")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_2imlf")

[node name="Label" type="Label" parent="."]
offset_left = -37.0
offset_top = -42.0
offset_right = 48.0
offset_bottom = -18.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_l5mgo")
text = "reiniciar"

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_ab7yh")
debug_color = Color(0.963715, 1.54018e-06, 0.497071, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
